Add model interfaces and project class

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,6 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <h1>Todo List</h1>
+    <header><h1>Todo List</h1></header>
+
+    <div id="sidenav">
+      <!-- <button id="all-tasks-button"></button>
+      <button id="today-tasks-button"></button> -->
+      sidenav
+    </div>
+    <main>Hello World</main>
+
+    <footer>
+      <h3>
+        &copy;
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        Qendrim Behrami
+      </h3>
+      <a href="https://github.com/QendrimBehrami/Todo-List" target="_blank">
+        <i class="fab fa-github"></i
+      ></a>
+    </footer>
   </body>
 </html>
