--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@ body {
   height: 100vh;
   display: grid;
   grid-template-rows: 4rem auto 3rem;
-  grid-template-columns: 10rem auto;
+  grid-template-columns: 20rem auto;
   grid-template-areas: "nav header" "nav main" "nav footer";
   margin: 0;
   padding: 0;
@@ -47,8 +47,55 @@ main {
 
 #sidenav {
   grid-area: nav;
-  background-color: black;
-  color: white;
+  background-color: rgba(240, 250, 250, 1);
+
+  color: black;
   padding-top: 4rem;
   padding-bottom: 3rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+#sidenav button,
+#projects button {
+  background-color: inherit;
+  color: inherit;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 1.5rem;
+}
+
+.rotate-left:hover {
+  font-style: italic;
+  transform: scale(1.2) rotate(-5deg);
+}
+
+.rotate-right:hover {
+  font-style: italic;
+  transform: scale(1.2) rotate(5deg);
+}
+
+#sidenav h2,
+#projects h2 {
+  font-size: 2rem;
+  margin-bottom: 0.3rem;
+}
+
+#page-nav,
+#projects {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+#projects > .page-element,
+#page-nav > .page-element {
+  direction: flex;
+  font-size: 1.5rem;
+  padding-left: 2rem;
+}
+
+#projects h2 {
+  margin-top: 10rem;
 }
