--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,9 @@ main {
 #sidenav {
   grid-area: nav;
   background-color: rgba(240, 250, 250, 1);
-
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
   color: black;
   padding-top: 4rem;
   padding-bottom: 3rem;
@@ -94,8 +96,4 @@ main {
   direction: flex;
   font-size: 1.5rem;
   padding-left: 2rem;
-}
-
-#projects h2 {
-  margin-top: 10rem;
 }
